--- a/16-by-9.css
+++ b/16-by-9.css
@@ -1,23 +1,48 @@
-body {
-    display: block !important;
-    width: 178vh !important;
-    max-width: 100vw !important;
-    height: 56vw !important;
-    max-height: 100vh !important;
-    margin: 0 auto;
-    padding: 0;
-}
+@document
+    domain("fabtech.work"),
+    domain("blacktiesports.to"),
+    domain("hdlivegames.xyz"),
+    domain("1stream.link"),
+    domain("techclips.net"),
+    domain("topstreams.info"),
+    domain("1stream.top"),
+    domain("hockeyweb.live"),
+    domain("theanh.tech"),
+    domain("watchkobestreams.info"),
+    domain("blacktiesports.net"),
+    domain("nflsportz.com"),
+    domain("soccerufc.xyz"),
+    domain("usite.pro"),
+    domain("uhdstreams.club"),
+    domain("weakstreams.com"),
+    domain("bfstrs.xyz"),
+    domain("volokit.com"),
+    domain("givemenbastreams.com"),
+    domain("liveonscore.tv")
+    {
 
-iframe {
-    display: block !important;
-    width: 178vh !important;
-    max-width: 100vw !important;
-    height: 56vw !important;
-    max-height: 100vh !important;
-    margin: 0 auto;
-    padding: 0;
-}
+    body {
+        display: block !important;
+        width: 178vh !important;
+        max-width: 100vw !important;
+        height: 56vw !important;
+        max-height: 100vh !important;
+        margin: 0 auto;
+        padding: 0;
+    }
+    
+    iframe {
+        display: block !important;
+        width: 178vh !important;
+        max-width: 100vw !important;
+        height: 56vw !important;
+        max-height: 100vh !important;
+        margin: 0 auto;
+        padding: 0;
+    }
+    
+    #video-player div {
+            height: 56vw !important; !important; width: 100% !important; max-height: 100vh !important; max-width: 100vw !important; margin: 0 auto !important;
+    }
 
-#video-player div {
-        height: 56vw !important; !important; width: 100% !important; max-height: 100vh !important; max-width: 100vw !important; margin: 0 auto !important;
 }
